# Rubiks-Cube-Solver

./: 1DArrayRepresentation.cpp  3DArrayRepresentation.cpp  BFSSolver.h  BaseRubiksCube.cpp  BaseRubiksCube.h  BitBoardRepresentation.cpp  CMakeLists.txt  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h  main.cpp
PatternDatabase/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
